@@ -1,3 +1,9 @@
+2007-06-07  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsppd.c (cautious_PyUnicode_DecodeUTF8): New function to
+	safe-guard against supposed UTF-8 strings that are incorrect (bug
+	#242962).
+
 2007-05-18  Tim Waugh  <twaugh@redhat.com>
 
 	* examples/cupstree.py: New file.
